# corelix_application_monorepo

./: .env.example  .gitignore  .rules  ARCHITECTURE.md  CASE_STUDY.md  CLAUDE_CONTEXT.md  PROJECT_INSTRUCTIONS.md  README.md  docker-compose.dev.yml  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  Dockerfile.worker  README.md  alembic.ini  main.py  pyproject.toml
apps/api/agenda/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/ai/: __init__.py  prompts.py  service.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 56f1e41b5d4c_initial_schema.py  b2c3d4e5f6a7_whatsapp_providers.py
apps/api/auth/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/clients/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/core/: __init__.py  config.py  database.py  deps.py  exceptions.py  logging.py  mixins.py  models.py  security.py
apps/api/jobs/: runner.py
apps/api/jobs/tasks/: cleanup.py  recurrences.py  whatsapp.py
apps/api/professionals/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/reports/: __init__.py  repository.py  router.py  schemas.py  service.py
apps/api/tests/: __init__.py  conftest.py
apps/api/tests/agenda/: conftest.py  test_model.py  test_repository.py  test_router.py  test_schemas.py  test_service.py
apps/api/tests/auth/: test_model.py  test_repository.py  test_router.py  test_service.py
apps/api/tests/clients/: conftest.py  test_model.py  test_repository.py  test_router.py  test_service.py
apps/api/tests/core/: test_deps.py  test_health.py  test_observability.py  test_security.py
apps/api/tests/jobs/: test_cleanup.py  test_recurrences.py  test_whatsapp.py
apps/api/tests/professionals/: test_model.py  test_repository.py  test_router.py  test_service.py
apps/api/tests/reports/: conftest.py  test_repository.py  test_router.py  test_schemas.py  test_service.py
apps/api/tests/whatsapp/: conftest.py  test_model.py  test_repository.py  test_router.py  test_schemas.py  test_service.py
apps/api/tests/whatsapp/devtools/: test_terminal_chat.py
apps/api/tests/whatsapp/providers/: __init__.py  conftest.py  test_base.py  test_crypto.py  test_factory.py  test_idempotency.py  test_meta.py  test_terminal.py  test_twilio_shared.py
apps/api/tests/whatsapp/webhooks/: test_meta_webhook.py  (+1 more)
apps/api/whatsapp/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/whatsapp/devtools/: __init__.py  terminal_chat.py
apps/api/whatsapp/providers/: __init__.py  base.py  crypto.py  factory.py  meta.py  terminal.py  twilio_shared.py
apps/api/whatsapp/webhooks/: __init__.py  meta.py  twilio.py
(+165 files in other folders)
